--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,17 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.9.RELEASE</version>
+		<version>2.7.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.soa</groupId>
 	<artifactId>wordlines</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>wordlines</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Simple Quiz Game</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
