--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,10 @@ spring.datasource.hikari.maximumPoolSize=5
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/wordlines
 spring.datasource.username=postgres
-spring.datasource.password=Pierpaolo1989NA
+spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
+
+application.title=Wordlines
